--- a/static/styles.css
+++ b/static/styles.css
@@ -22,6 +22,11 @@ h1 {
     text-align: center;
 }
 
+.flex-container div img {
+    width: 48px;
+    height: 48px;
+}
+
 .flex-container div p {
     margin: 0 5px;
     overflow: hidden;
